--- a/3_coroutines.ipynb
+++ b/3_coroutines.ipynb
@@ -178,9 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetched https://jsonplaceholder.typicode.com/posts/1 wotj status 200\n",
+      "Fetched https://httpbin.org/get wotj status 200\n",
+      "Fetched https://example.com wotj status 200\n",
+      "All tasks completed\n"
+     ]
+    }
+   ],
    "source": [
     "# Fetching data from an API\n",
     "\n",
@@ -188,7 +199,7 @@
     "import aiohttp\n",
     "\n",
     "async def fetch_url(url):\n",
-    "    async with aiohttp.ClientSession as session:\n",
+    "    async with aiohttp.ClientSession() as session:\n",
     "        async with session.get(url) as response:\n",
     "            print(f\"Fetched {url} wotj status {response.status}\")\n",
     "            return await response.text()\n",
