--- a/7_decorators.ipynb
+++ b/7_decorators.ipynb
@@ -36,24 +36,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am the decorator\n",
+      "I am normal Hello from normal function\n"
+     ]
+    }
+   ],
    "source": [
     "# Example of a simple decorator\n",
-    "def enrich():\n",
+    "def enrich(func):\n",
     "    print(\"I am the decorator\")\n",
+    "    normal = func()\n",
+    "    print(\"I am normal\", normal)\n",
     "\n",
-    "@enrich\n",
     "def say_hello():\n",
-    "    print(\"Hello from normal function\")\n",
-    "    enr"
+    "    return \"Hello from normal function\"\n",
+    "\n",
+    "enrich(say_hello)  "
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
