--- a/10_pydantic.ipynb
+++ b/10_pydantic.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### Pydantic in Python\n",
     "Pydantic is a data validation and setting management library for Python.\n",
-    "It is designed to help make working with data and configuration easier and safer. It is useful when defining and validation both simple and complex dat structurs, parsing user inputs and ensuring type safety in Python applications."
+    "It is designed to help make working with data and configuration easier and safer. It is useful when defining and validation both simple and complex data structures, parsing user inputs and ensuring type safety in Python applications."
    ]
   },
   {
