--- a/11_python_descriptor_protocol.ipynb
+++ b/11_python_descriptor_protocol.ipynb
@@ -32,7 +32,7 @@
      "output_type": "stream",
      "text": [
       "Setting value...\n",
-      "Getting value...\n",
+      "Getting value... The owner is <class '__main__.MyClass'>. Instance is <__main__.MyClass object at 0x1118ce7b0>\n",
       "10\n",
       "Deleting value...\n"
      ]
@@ -42,7 +42,7 @@
     "# Example of a descriptor class\n",
     "class Descriptor:\n",
     "    def __get__(self, instance, owner):\n",
-    "        print(\"Getting value...\")\n",
+    "        print(f\"Getting value... The owner is {owner}. Instance is {instance}\")\n",
     "        return instance._value\n",
     "\n",
     "    def __set__(self, instance, value):\n",
