--- a/12_memory_management_and_gc_module.ipynb
+++ b/12_memory_management_and_gc_module.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
    "metadata": {},
    "source": [
     "#### 2. Garbage Collection\n",
-    "Python's garbage collector handles objects that cannot be freed using reference counting such as thos involve in circular references"
+    "Python's garbage collector handles objects that cannot be freed using reference counting such as those involve in circular references"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "source": [
     "#### 3. Memory Pools\n",
     "* Python uses a private heap for memory management\n",
-    "* a layer called Python memory manager handlels allocation and deallocation of memory\n",
+    "* a layer called Python memory manager handles allocation and deallocation of memory\n",
     "* Smaller objects are mamanged using a specialized allocator (pymalloc)"
    ]
   },
@@ -58,7 +58,7 @@
    "source": [
     "### The gc Module\n",
     "This provides an interface for garbage collection in Python. \n",
-    "Although Python handles garbage collection automatically, the gc module allows you manually control \n",
+    "Although Python handles garbage collection automatically, the `gc` module allows you manually control \n",
     "garbage collection in Python. \\\n",
     "* gc.collect - run garbage collection\n",
     "* gc.enable - enables garbage collecton\n",
