--- a/14_abstract_base_classes.ipynb
+++ b/14_abstract_base_classes.ipynb
@@ -13,6 +13,7 @@
     "* serves as a template for creating other classes\n",
     "* contains abstract methods\n",
     "\\\n",
+    "\n",
     "**Abstract Method** \\\n",
     "* declared in the abstract base class and must be implemented in the derived classes\n",
     "* defined using the `@abstractmethod` decorator\n"
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +29,7 @@
      "output_type": "stream",
      "text": [
       "6.0\n",
-      "24\n"
+      "None\n"
      ]
     }
    ],
@@ -73,7 +74,7 @@
     "### Additional ABC Concepts\n",
     "* optional concrete methods - an abc can also include methods with concrete implementations which subclasses will inherit by default\n",
     "* type checking - ABCs can also be used for type checking with `isinstance` or `issubclass`\n",
-    "* built-in ABCs - Python also provides a set of built-in abstract base classe inthe collections.Sequence module \\\n",
+    "* built-in ABCs - Python also provides a set of built-in abstract base classes in the `collections.Sequence` module \\\n",
     "Some examples of built-in abc are given below"
    ]
   },
