--- a/15_ lazy_evaluation.ipynb
+++ b/15_ lazy_evaluation.ipynb
@@ -12,10 +12,10 @@
     "Lazy evaluation is a technique where computations are delayed untill their results are actually needed.\n",
     "This can help improve performance a lot where heavy computations are needed\n",
     "\n",
-    "Python supports lazy evaluation throught featurs like \\\n",
+    "Python supports lazy evaluation throught features like \\\n",
     "* iterators\n",
     "* generators\n",
-    "* memoization technique like functools.lru_cache"
+    "* memoization technique like `functools.lru_cache`"
    ]
   },
   {
@@ -26,15 +26,15 @@
     }
    },
    "source": [
-    "### Lazy Evaluation with functools.lru_cache\n",
+    "### Lazy Evaluation with `functools.lru_cache`\n",
     "This is used to cache results of a function call enabling lazy computation.\n",
     "This means that when the function is called again with the same arguments, the cached result is returned instead of recomputing or re-executing the function.\n",
     "\\\n",
     "\n",
     "**How `lru_cache` Work**\n",
-    "* when a function is decorated with lru_cache, Python stores the results of the calls ina  cache\n",
+    "* when a function is decorated with the `@lru_cache` decorator, Python stores the results of the calls in a  cache\n",
     "* if the cache reaches it's size limit, the least-recently-used entries are purged\n",
-    "* when the function it called, the ressult is retrieved from the cache if it exists, otherwise, it is the result is computed and stored in the cache\n"
+    "* when the function it called, the ressult is retrieved from the cache if it exists, otherwise, the result is computed and stored in the cache\n"
    ]
   },
   {
@@ -76,8 +76,8 @@
     "Iterators are Python objects that produce items one at a time. This allows for efficient traversal of potentially infinite or large datasets without loading everything into memory. \\\n",
     "\n",
     "**How Iterators Work** \\\n",
-    "* an iterator implements the __iter__() and __next__() methods\n",
-    "* when the next() method is called, the iterator computes the next value lazily\n",
+    "* an iterator implements the `__iter__()` and `__next__()` methods\n",
+    "* when the `next()` method is called, the iterator computes the next value lazily\n",
     "* iterators are consumed as they are used"
    ]
   },
