--- a/1_generators.ipynb
+++ b/1_generators.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Generators in Python\n",
     "A generator in Python is a special type of iterable that allows you to generate values one at a time instead of storing all of them in memory at once.\n",
-    "Generators are functions are return an iterable using the yeild keyword.\n",
+    "Generators are functions that return an iterable using the yeild keyword.\n",
     "Since generators produce values on the fly, they are more memory efficient than list especially when handling large datasets. \\\n",
     "\n",
     "**Defining a Generator**\n",
