--- a/3_coroutines.ipynb
+++ b/3_coroutines.ipynb
@@ -5,8 +5,8 @@
    "metadata": {},
    "source": [
     "## Coroutines\n",
-    "These are funtions that can suspend it's execution before reaching return and can also indirectly pass control to another coroutine for some time\n",
-    "A coroutine is defined using the async def\n"
+    "These are funtions that can suspend it's execution before reaching return and can also indirectly pass control to another coroutine for some time.\n",
+    "A coroutine is defined using the `async def`\n"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
