--- a/4_multiprocessing.ipynb
+++ b/4_multiprocessing.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "## Multiprocessing in Python\n",
     "Multiprocessing in Python allows you to crate multiple processes enabling parallel execution of tasks accross multiple CPU cores.\n",
-    "Unlike threads that run inthe same memory, processes have their own separate memory, making them ideal for CPU-bout tasks that require heavy computation \\\n",
+    "Unlike threads that run in the same memory, processes have their own separate memory, making them ideal for CPU-bound tasks that require heavy computation \\\n",
     "\n",
     "**Benefits include**\n",
     "* Bypasses the Global Interpreter Lock (GIL) which allows only one thread to execute Python bytecode at a time  limiting the performance of CPU tasks\n",
