--- a/6_closures.ipynb
+++ b/6_closures.ipynb
@@ -5,19 +5,19 @@
    "metadata": {},
    "source": [
     "## Closures in Python\n",
-    "Closure derives from nested function which is a function defined within another function\n",
-    "**A Closure** is a child function that remembers variables from the parent/enclosing functioneven when those variables are not longer in the memory.\n",
+    "Closure derives from nested function which is a function defined within another function \\\n",
+    "**A Closure** is a child function that remembers variables from the parent/enclosing function even when those variables are not longer in the memory. \\\n",
     "It means that the inner function remembers variables from the outer function even when the outer function has finished executing. \n",
     "A closure is created when:\n",
     "* a function encloses another function\n",
     "* the enclosed function accessed variable from the outer function\n",
     "* the outer function returns the inner function\n",
-    "* the returned function access the variables ofthe outer function after the function has exited"
+    "* the returned function access the variables of the outer function after the function has exited"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
