--- a/7_decorators.ipynb
+++ b/7_decorators.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "## Decorators in Python\n",
-    "A decorator in Python is a design pattern that allows you to modify or enhance the behaviour of a function or class without changing the actual code of the function.\n",
+    "A decorator in Python is a design pattern that allows you to modify or enhance the behaviour of a function or class without changing the actual code of the function. \\\n",
     "It is a callable that takes a function as an argument and returns a new function with the added functionality. \\\n",
-    "Before goin further, you need to understand the concept of first-class objects since functions in Python are first-class objects\n",
+    "Before going further, you need to understand the concept of first-class objects since functions in Python are first-class objects\n",
     "\n",
     "**First-class Objects** \\\n",
-    "* a function is an instance of the Objet type\n",
+    "* a function is an instance of the Object type\n",
     "* you can store a function in a variable\n",
     "* you can pass function as a parameter to another function\n",
     "* you can return function from a function\n",
