--- a/9_context_managers.ipynb
+++ b/9_context_managers.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Context Manager/ Context Management in Python **\n",
+    "## Context Manager/ Context Management in Python \n",
     "This is a mechanism used to manage resources more efficiently ensuring that they are properly acquired and released.\n",
     "It is implemented using context managers along with the `with` statement\n",
     "\n",
     "**Context Manager** \\\n",
-    "These are objects that define the runtime context of a block of code. Ther are implemented using \\\n",
+    "These are objects that define the runtime context of a block of code. They are implemented using \\\n",
     "* __enter__(): runs when context is entered \n",
     "* __exit__(): runs when context is exited\n",
     "\n",
@@ -36,7 +36,7 @@
    "metadata": {},
    "source": [
     "#### Custom Context Managers\n",
-    "You can create your own context managers by defining the __enter__ and __exit__ methods in a class\n"
+    "You can create your own context managers by defining the `__enter__` and `__exit__` methods in a class\n"
    ]
   },
   {
